--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
