--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "client",
+  "name": "reactivesearch-auth0-example",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3003/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "node-sass": "^4.13.1",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
-    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
