--- a/package.json
+++ b/package.json
@@ -32,9 +32,22 @@
   },
   "homepage": "https://github.com/elhamposhtiban/Something-To-Remember#readme",
   "dependencies": {
+    "@appbaseio/reactivesearch": "^3.4.3",
+    "@auth0/auth0-spa-js": "^1.6.4",
+    "auth0-js": "^9.12.2",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "bulma": "^0.8.0",
+    "connect-mongo": "^3.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "query-string": "^6.11.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
