--- a/package.json
+++ b/package.json
@@ -32,9 +32,24 @@
   },
   "homepage": "https://github.com/elhamposhtiban/Something-To-Remember#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
+    "gravatar": "^1.8.0",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.3"
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "mongoose": "^5.9.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
