--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "query-string": "^6.11.1",
+    "validator": "^12.2.0",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
