--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
