--- a/package.json
+++ b/package.json
@@ -44,18 +44,25 @@
     "bulma": "^0.8.0",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.0.1",
+    "explore": "^0.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "gravatar": "^1.8.0",
+    "i18n": "^0.8.6",
+    "i18next": "^19.3.3",
     "if-env": "^1.0.4",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
+    "language-selector": "0.0.1-a.1",
+    "languages-js": "^2.3.0",
     "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "query-string": "^6.11.1",
+    "react-i18next": "^11.3.3",
+    "react-select": "^3.0.8",
     "validator": "^12.2.0",
     "yarn": "^1.22.4"
   },
